eclipse-workspace/Surya Dev Org/src/objects/ZTS_US_Event_Invitee__c.object
<CustomObject>
    <description>Acts as a Junction between Contacts and Events

Zoetis Client</description>
    <fields>
        <fullName>CE_Event_Non_Registration_Link__c</fullName>
        <description>Zoetis Non Invited Users</description>
        <formula>&quot;http://na16.salesforce.com/CEEventRegistration/CEEventRegistrationForm?eid=&quot;+ ZTS_US_Event__r.Id</formula>
        <label>CE Event Non Registration Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Event_Registration_Link__c</fullName>
        <description>Zoetis for Registered contacts.</description>
        <formula>&quot;http://na16.salesforce.com/CEEventRegistration/CEEventRegistrationForm?eid=&quot;+ ZTS_US_Event__r.Id + &quot;&amp;eaid=&quot; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CE Event Registration Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events Attended</relationshipLabel>
        <relationshipName>Invitees</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Invitee_Account_Name__c</fullName>
        <description>Zoetis</description>
        <formula>ZTS_US_Contact__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Invitee_Email__c</fullName>
        <description>Zoetis</description>
        <formula>ZTS_US_Contact__r.Interface_Email__c</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Invitee_First_Name__c</fullName>
        <formula>ZTS_US_Contact__r.FirstName</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Invitee_Last_Name__c</fullName>
        <description>Zoetis</description>
        <formula>ZTS_US_Contact__r.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Invitee_Mailing_State__c</fullName>
        <description>zoetis</description>
        <formula>ZTS_US_Contact__r.MailingState</formula>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Invitee_Mailing_Zip_Postal__c</fullName>
        <description>zoetis</description>
        <formula>ZTS_US_Contact__r.MailingPostalCode</formula>
        <label>Mailing Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Invitee_Mailing__c</fullName>
        <description>Zoetis</description>
        <formula>ZTS_US_Contact__r.MailingCity</formula>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Name__c</fullName>
        <formula>ZTS_US_Event__r.ZTS_US_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Start_Date__c</fullName>
        <description>Zoetis</description>
        <formula>ZTS_US_Event__r.ZTS_US_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Status__c</fullName>
        <description>zoetis</description>
        <formula>TEXT(ZTS_US_Event__r.ZTS_US_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Type__c</fullName>
        <formula>TEXT(ZTS_US_Event__r.ZTS_US_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event__c</fullName>
        <description>Zoetis</description>
        <label>Events</label>
        <referenceTo>ZTS_Events__c</referenceTo>
        <relationshipLabel>Event Invitees</relationshipLabel>
        <relationshipName>Invitees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Invitation_Status__c</fullName>
        <label>Invitation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Invitee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Invitee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Invitees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>